--- a/app/css/sb-admin.css
+++ b/app/css/sb-admin.css
@@ -34,7 +34,7 @@ body {
 
 @media (min-width: 768px) {
   #wrapper {
-    padding-left: 225px;
+    padding-left: 150px;
   }
 
   #page-wrapper {
@@ -116,17 +116,18 @@ ul.alert-dropdown {
   .side-nav {
     position: fixed;
     top: 51px;
-    left: 225px;
-    width: 225px;
-    margin-left: -225px;
+    left: 150px;
+    width: 150px;
+    margin-left: -150px;
     border: none;
+    color: #ffffff;
     border-radius: 0;
     overflow-y: auto;
     background-color: #222;
   }
 
   .side-nav > li > a {
-    width: 225px;
+    width: 150px;
   }
 
   .side-nav li a:hover,
@@ -227,8 +228,34 @@ ul.alert-dropdown {
   width: 100%;
   height: 400px;
   padding: 10px;
+  background: rgba(150, 150, 150, 1);
+  background: -moz-radial-gradient(center, ellipse cover, rgba(150, 150, 150, 1) 0%, rgba(0, 0, 0, 1) 100%);
+  background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%, rgba(150, 150, 150, 1)), color-stop(100%, rgba(0, 0, 0, 1)));
+  background: -webkit-radial-gradient(center, ellipse cover, rgba(150, 150, 150, 1) 0%, rgba(0, 0, 0, 1) 100%);
+  background: -o-radial-gradient(center, ellipse cover, rgba(150, 150, 150, 1) 0%, rgba(0, 0, 0, 1) 100%);
+  background: -ms-radial-gradient(center, ellipse cover, rgba(150, 150, 150, 1) 0%, rgba(0, 0, 0, 1) 100%);
+  background: radial-gradient(ellipse at center, rgba(150, 150, 150, 1) 0%, rgba(0, 0, 0, 1) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#969696', endColorstr='#000000', GradientType=1);
 }
 
 .cust-buton {
   width: 100%;
+  margin: 5px;
+}
+
+.materialImg:hover {
+  background-color: #5cb85c;
+  border-color: #5cb85c;
+}
+
+hr {
+  display: block;
+
+  margin: 10px;
+  border-color: #ffffff;
+  background-color: #ffffff;
+  color: #ffffff;
+
+  border-style: inset;
+  border-width: 1px;
 }
