Added material infomation model changes colour based on the onclick

--- a/app/css/sb-admin.css
+++ b/app/css/sb-admin.css
@@ -261,6 +261,11 @@ ul.alert-dropdown {
   border-color: #5cb85c;
 }
 
+.materialSelected {
+  background-color: #5cb85c;
+  border-color: #5cb85c;
+}
+
 hr {
   display: block;
 
