--- a/app/css/sb-admin.css
+++ b/app/css/sb-admin.css
@@ -227,15 +227,7 @@ ul.alert-dropdown {
 .webgl {
   width: 100%;
   height: 400px;
-  padding: 10px;
-  background: rgba(150, 150, 150, 1);
-  background: -moz-radial-gradient(center, ellipse cover, rgba(150, 150, 150, 1) 0%, rgba(0, 0, 0, 1) 100%);
-  background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%, rgba(150, 150, 150, 1)), color-stop(100%, rgba(0, 0, 0, 1)));
-  background: -webkit-radial-gradient(center, ellipse cover, rgba(150, 150, 150, 1) 0%, rgba(0, 0, 0, 1) 100%);
-  background: -o-radial-gradient(center, ellipse cover, rgba(150, 150, 150, 1) 0%, rgba(0, 0, 0, 1) 100%);
-  background: -ms-radial-gradient(center, ellipse cover, rgba(150, 150, 150, 1) 0%, rgba(0, 0, 0, 1) 100%);
-  background: radial-gradient(ellipse at center, rgba(150, 150, 150, 1) 0%, rgba(0, 0, 0, 1) 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#969696', endColorstr='#000000', GradientType=1);
+  border: 1px solid black;
 }
 
 .cust-buton {
