--- a/app/css/style.css
+++ b/app/css/style.css
@@ -27,7 +27,13 @@ body {
 }
 
 .webgl {
-  height: 500px;
+  background-color: #000;
+  width: 200px;
+  height: 200px;
+  border: 1px solid black;
+  margin: 10px;
+  padding: 0px;
+  position: static;
 }
 
 .card {
