--- a/app/css/custome.css
+++ b/app/css/custome.css
@@ -207,9 +207,11 @@ hr {
   border-width: 1px;
 }
 
-td {
-  text-align: center;
-}
+
+
+
+
+
 
 .row {
   margin: 0px;
@@ -230,5 +232,39 @@ td {
 
 .drop-thing{
   width:100%;
-  min-height:150px;
+  min-height:160px;
+}
+
+
+
+.table-curved {
+  border-collapse: separate;
+  border: solid #ddd 1px;
+  border-radius: 6px;
+  border-left: 0px;
+  border-top: 0px;
+}
+.table-curved > thead:first-child > tr:first-child > th {
+  border-bottom: 0px;
+  border-top: solid #ddd 1px;
+}
+.table-curved td, .table-curved th {
+  border-left: 1px solid #ddd;
+  border-top: 1px solid #ddd;
+}
+.table-curved > :first-child > :first-child > :first-child {
+  border-top-left-radius: 6px;
+}
+.table-curved > :first-child > :first-child > :last-child {
+  border-top-right-radius: 6px;
+}
+.table-curved > :last-child > :last-child > :first-child {
+  border-bottom-left-radius: 6px;
+}
+.table-curved > :last-child > :last-child > :last-child {
+  border-bottom-right-radius: 6px;
+}
+
+.tr-center{
+  text-align: center;
 }
