--- a/app/css/custom.css
+++ b/app/css/custom.css
@@ -7,7 +7,7 @@
 /* Toggle Styles */
 
 html, body {
-  height: 100%;
+  height: calc(100% - 60px);
 }
 
 
@@ -16,6 +16,43 @@ body {
 
 }
 
+.borderless tbody tr td, .borderless tbody tr, .borderless thead tr th {
+
+  border-radius: 5px;
+
+}
+
+.bottom {
+  position: absolute;
+  bottom: 0;
+  margin-bottom: 7px;
+  left: 10;
+  width: 90%; /* fallback if needed */
+  width: calc(100% - 4em);
+}
+
+.containerbody {
+  margin-top: 60px
+}
+
+.webgl {
+  width: 100%;
+  min-height: 100%;
+  height: 100%;
+}
+
+.webgl-contaner {
+  height: calc(100% - 350px);
+}
+
+.btn-container {
+  margin-top: 10px;
+  height: 100px
+}
+
+.info-container {
+  height: 250px
+}
 nav{
   margin-top: 0px;
 }
@@ -185,12 +222,6 @@ body>.container{
 
 .panel-yellow a:hover {
   color: #df8a13;
-}
-
-.webgl {
-  width: 100%;
-  min-height: 350px;
-  height: 100%;
 }
 
 .cust-buton {
