--- a/app/css/customv2.css
+++ b/app/css/customv2.css
@@ -1,6 +1,7 @@
 body,html{
   height: 100%;
   width:100%;
+  background-color:#000;
 }
 body>.container{
   height:100%;
@@ -18,7 +19,9 @@ nav>.container{
   width:100%;
   vertical-align: middle;
   height:100%;
-  background-color:#387A99;
+  margin-left: 10px;
+  padding: 10px;
+  margin-right: 10px;
 }
 
 [class*="col-"] {
