--- a/app/css/customv2.css
+++ b/app/css/customv2.css
@@ -18,6 +18,7 @@ nav>.container{
   display: table-row;
   width:100%;
   vertical-align: middle;
+  min-height: 100%;
   height:100%;
   margin-left: 10px;
   padding: 10px;
