--- a/app/scripts/views/app.html
+++ b/app/scripts/views/app.html
@@ -1,23 +1,28 @@
 <div class="row" style="height:100%;padding:0px; padding-left: 15px; padding-right: 15px; margin:0px;">
-  <div class="col-lg-3" style="height:100%; overflow: scroll; padding:5px;">
+  <div class="col-lg-3" style="height:100%; padding:5px;">
 
 
-    <div class="panel panel-default" style="height:96%;  margin-top:10px;">
+    <div class="panel panel-default" style=" min-height:96%;
+	height:96%;  margin-top:10px;">
       <div class="panel-heading clearfix">
         <h3 class="panel-title pull-left">Materials </h3>
       </div>
-      <div class="panel-body" style="-webkit-flex: 1 1 auto;
-    flex: 1 1 auto;
-    overflow: auto;
-    height:0; /* triggers scroll */
-    min-height: 90%; /* triggers scroll */
-    ">
-        <table id="materialTable" style="margin: 0px" class="table">
+      <div id="materialBody" class="panel-body" style="padding: 0;">
+
+        <div style="-webkit-flex: 1 1 auto;
+             flex: 1 1 auto;
+             overflow: auto;
+             height:0;
+        min-height:100%;
+        ">
+
+          <table id="materialTable" class="table">
           <col width="30%">
           <col width="20%">
           <col width="50%">
           <tr></tr>
         </table>
+        </div>
       </div>
     </div>
 
@@ -33,7 +38,7 @@
           <button type="button" id="resetbtn" class="btn btn-primary">Rest Camera</button>
         </div>
       </div>
-      <div class="panel-body" style="display: table;  height: 90%; width:100%;">
+      <div id="mainPanelBody" class="panel-body" style="display: table;  height: 90%; width:100%;">
         <div class="content">
           <div id="jet" style="background-color: #708090;min-height: 350px;"
                class="webgl img-thumbnail img-responsive"></div>
