UI bug fix Change for smaller screens

--- a/app/scripts/views/app.html
+++ b/app/scripts/views/app.html
@@ -43,11 +43,12 @@
           <div id="jet" style="background-color: #708090;min-height: 350px;"
                class="webgl img-thumbnail img-responsive"></div>
         </div>
+        <div class="content" style="height:20px;"></div>
         <div class="footer">
           <table border="0" class="table table-bordered table-curved" style="background-color: #ffffff;">
-            <col width="20%">
+            <col width="15%">
             <col width="10%">
-            <col width="75%">
+            <col width="80%">
             <tr>
               <th rowspan="3">
                 <div id="FanCheck" class="drop-thing img-thumbnail"></div>
